tests/core/snapshots/test-custom-scalar.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

scalar Json

type Query {
  foo: [Json] @http(url: "http://jsonplacheholder.typicode.com/foo")
}
