tests/core/snapshots/test-enable-jit.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(enableJIT: true, hostname: "0.0.0.0", port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  id: Int!
  title: String!
  user: User @http(path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query @cache(maxAge: 30000) {
  posts: [Post] @http(path: "/posts")
}

type User {
  id: Int!
  name: String!
  username: String!
}
