tests/core/snapshots/test-enum-aliases.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

enum Foo {
  BAR @alias(options: ["OP1", "OP2"])
  BAZ
}

type Query {
  foo: Foo @expr(body: "OP1")
}
