tests/core/snapshots/test-enum-merge.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

enum Foo {
  BAR
  BAZ
  BOOM
}

type Query {
  foo: Foo @http(url: "http://jsonplaceholder.typicode.com/foo")
}
