tests/core/snapshots/test-enum.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

enum Foo {
  BAR
  BAZ
}

type Query {
  foo(val: String!): Foo @expr(body: "{{.args.val}}")
}
