tests/core/snapshots/test-eval-partial.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  foo: String
  id: Int!
  user: User
  userId: Int!
}

type Query {
  post(id: Int!): [Post]
}

type User {
  id: Int!
}

schema {
  query: Query
}
